secure-k8s-deployment/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-deploy
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
