secure-k8s-deployment/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  namespace: secure-deploy
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
